# maya

./: .gitignore  .oxlintrc.json  AGENTS.md  README.md  lefthook.yml  package.json  turbo.json
.github/workflows/: ci.yml  serve-deploy.yml  web-deploy.yml
apps/aegis/: .dockerignore  .oxfmtrc.jsonc  .oxlintrc.json  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/aegis/public/bundle/: config.json  enrollment.json
apps/aegis/public/models/: README.txt  det_10g_web.onnx
apps/aegis/src/: main.ts  style.css
apps/aegis/src/inference/: worker.ts
apps/serve/: .dockerignore  .env.example  Dockerfile  main.py  package.json  pyproject.toml
apps/serve/data/enrolled/: README.md
apps/serve/data/enrolled/harsh/: metadata.json
apps/serve/maya_serve/: __init__.py  compat.py  config.py  enrollment.py  enrollment_sync.py  protocol.py  service.py  tracking.py
apps/serve/stubs/faiss/: __init__.pyi
apps/serve/stubs/insightface/: __init__.pyi
apps/serve/stubs/insightface/app/: __init__.pyi
apps/serve/stubs/onnxruntime/: __init__.pyi
apps/serve/stubs/supervision/: __init__.pyi
apps/web/: .env.example  .oxlintrc.json  Dockerfile  bunfig.toml  index.test.ts  index.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: api.e2e.ts  websocket.e2e.ts
apps/web/lib/: enrollment-store.test.ts  enrollment-store.ts  protocol.test.ts  protocol.ts  python-bridge.test.ts  python-bridge.ts
apps/web/public/: client.js  index.html  styles.css
