[project]
name = "serve"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.8",
]

[tool.pyright]
include = ["main.py"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N", "ANN", "SIM", "RET", "PL", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
