[project]
name = "serve"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "insightface>=0.7.3",
    "nvidia-cublas-cu12>=12.9.2.10 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-cuda-runtime-cu12>=12.9.79 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-cufft-cu12>=11.4.1.4 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "onnxruntime-gpu>=1.24.4 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "onnxruntime>=1.24.0 ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pillow>=12.1.1",
    "supervision>=0.27.0.post2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.8",
]

[tool.pyright]
include = ["main.py", "maya_serve"]
stubPath = "stubs"
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N", "ANN", "SIM", "RET", "PL", "RUF"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"stubs/**/*.pyi" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
